@startuml
title US020 \n  I want to import geographical area sensor readings into the application from a CSV file. \n Data outside the valid sensor operation period shouldn’t be imported but registered in the application log.

skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor ivory
skinparam FontName verdana
skinparam titleFontSize 10


skinparam class {
 	BorderColor indianred
 	BackgroundColor indianred
 	BackgroundColor ivory
    roundcorner 10
    ArrowFontName Verdana
    ArrowColor indianred
    ArrowFontColor darkslategrey
    FontSize 12
 }


MainUI -- HouseConfigurationUI : >

HouseConfigurationUI -- CSVReaderController : >
CSVReaderController -- CSVReader : >
CSVReaderController -- Sensor : >
CSVReaderController -- Logger : >
Sensor -- Reading : >
Logger -- CustomFormatter : >

class HouseConfigurationUI{

runUS20(GeographicAreaList)
}

class CSVReaderController{
startAndPromptPath()
readAndSet(GeographicAreaList geographicAreaList, String path)
setCSVReadings(Sensor sensor, Date date, Double value)
getSensorData(GeographicAreaList geographicAreaList)
parseAndLog(String[] readings, Logger logger, SensorList typeSensorList)
}

class CSVReader{
readCSV(String csvFileLocation)
}

class Sensor{
String id
Date dateStartedFunctioning
ReadingList readingList

getId()
addReading(Reading reading)
}

class Reading{
double value
Date date

Reading(double value, Date date)
}
class Logger{
getLogger(String name)
}

class CustomFormatter{
DateFormat df

format(LogRecord record)
getHead(Handler h)
getTail(Handler h)
}

@enduml